--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,8 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+
+  /*me*/
+  text-align: center;
 }
 
 img {
@@ -23,4 +26,22 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+
+/*me*/
+.title {
+  /* text-align: center; */
+  margin-bottom: 32px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+  /* text-align: center; */
+}
+
+.info {
+  max-width: 200px;
 }
