common modal style

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,12 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+  /*me*/
+  display: flex;
+  gap: 16px;
+  padding: 16px;
+  
 }
 
 .icon {
@@ -33,6 +39,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  /*me*/
+  flex-shrink: 0;
+
 }
 
 .close-button {
@@ -66,4 +76,18 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+/*me*/
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 700;
+  padding-bottom: 8px;
+}
+
+.text {
+  padding-bottom: 16px;
 }
