--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,86 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+
+  /* me */
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+
+  /* me */
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  font-size: 32px;
+  font-weight: 900;
+  /* align-content: center; */
+  /* padding: 16px; */
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+
+  /* me */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* text-align: center;
+  align-content: center; */
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+
+  /* me */
+  /* width: 300px; */
+  flex-shrink: 0;
+  padding: 16px;
+  
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+
+  /* me */
+  width: 250px;
+  height: 300px;
+}
+
+
+/* me */
+.container {
+  flex: 1;
+  display: flex;
+}
+
+.cards {
+  display: flex;
+  padding: 48px;
+  gap: 32px;
+  flex-wrap: wrap;
+}
+
+a {
+  color: white;
+  font-size: 24px;
+  text-decoration: none;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+li {
+  margin-bottom: 16px;
 }
